--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <div class="section-title">
           <h2>flavors</h2>
-          <p>100% preservative free flavors.</p>
+          <p>100% Natural flavors.</p>
         </div>
 
         <div class="row gy-4">
